--- a/Baha'i/Others/ROB/V2/p029-054Ch02.html
+++ b/Baha'i/Others/ROB/V2/p029-054Ch02.html
@@ -52,7 +52,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p30">30</a></center><p>
-	   * The rise and establishment of the Bahá'í Faith in the Western world has been remarkable. For further information see <i>God Passes By</i> and volumes of <i>The Bahá'í World</i>.<p>
+	   * The rise and establishment of the Bahá'í Faith in the Western world has been remarkable. For further information see <a href="../../../SE/GPB/Cover.html"><i>God Passes By</i></a> and volumes of <i>The Bahá'í World</i>.<p>
 	   <hr>
 	   1. Bahá'u'lláh, <i>Iqtidárát</i>, pp. 90-91.
 	   </small></td>
