--- a/Baha'i/Others/ROB/V2/p055-064Ch03.html
+++ b/Baha'i/Others/ROB/V2/p055-064Ch03.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p029-054Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p065-106Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -98,7 +98,7 @@
 	   † ibid. pp. <a href="../V1/p283-293Ch17.html">283</a>-7.<p>
 	   ‡ See chapter <a href="p291-300Ch14.html">14</a>.<p>
 	   <hr>
-	   2. Shoghi Effendi, <i>God Passes By</i>, pp. 159-61.
+	   2. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para147">159</a>-61.
 	   </small></td>
 </tr>
 <tr>
@@ -144,9 +144,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p62">62</a></center><p>
 	   <hr>
-	   5. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 161.<p>
-	   6. <i>ibid</i>.<p>
-	   7. <i>ibid</i>., pp. 161-2.
+	   5. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para151">p. 161</a>.<p>
+	   6. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para151"><i>ibid</i></a>.<p>
+	   7. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para152"><i>ibid</i></a>., pp. 161-2.
 	   </small></td>
 </tr>
 <tr>
@@ -176,7 +176,7 @@
        <td>
 	   	   <FORM ACTION="p029-054Ch02.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -184,12 +184,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p065-106Ch04.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
