--- a/Baha'i/Others/ROB/V2/p065-106Ch04.html
+++ b/Baha'i/Others/ROB/V2/p065-106Ch04.html
@@ -60,7 +60,7 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
        <td></td>
        <td VALIGN=top><small><center><a name="p66">66</a></center><p>
 	   <hr>
-	   1. Shoghi Effendi, <i>God Passes By</i>, p. 151.
+	   1. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para132">p. 151</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -518,6 +518,8 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
 	   <hr>
 	   29. Bahá'u'lláh, <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#p136">p. 136</a>.<p>
 	   30. Bahá'u'lláh, <i>The Bahá'í Revelation</i>, p. 138.
+	   <hr>
+	   ["The essence of wisdom is..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para438">p. 155</a>
 	   </small></td>
 </tr>
 <tr>
