--- a/Baha'i/Others/ROB/V2/p137-151Ch06.html
+++ b/Baha'i/Others/ROB/V2/p137-151Ch06.html
@@ -35,7 +35,7 @@
 <tr>
        <td width="80%"><center><img src="../Media/6.jpg" border="0" alt="6" align="middle"></center><p>
 	   <center><h2><i>Lawh-i-Ahmad</i> (Persian)</h2></center><p>
-	   Unlike the <i>Tablet of Ahmad</i> in Arabic, this is a lengthy Tablet in Persian and was revealed for Hájí Mírzá Ahmad of Káshán. He was a half-brother of Hájí Mírzá Jání and Hájí Muhammad Ismá'íl,* the latter entitled Dhabíh (Sacrifice) and Anís (Companion) by Bahá'u'lláh. Hájí Mírzá Jání was the first to embrace the Faith of the Báb in Káshán. He had attained the presence of the Báb in Mecca and had become an ardent believer. When the Báb was on His way to Tihrán, Hájí Mírzá Jání, after having secured permission from the officials who were conducting the Báb to the Capital, entertained Him in his house for three days. Later he was martyred in Tihrán.†<p>
+	   Unlike the <a href="p107-136Ch05.html"><i>Tablet of Ahmad</i> in Arabic</a>, this is a lengthy Tablet in Persian and was revealed for Hájí Mírzá Ahmad of Káshán. He was a half-brother of Hájí Mírzá Jání and Hájí Muhammad Ismá'íl,* the latter entitled Dhabíh (Sacrifice) and Anís (Companion) by Bahá'u'lláh. Hájí Mírzá Jání was the first to embrace the Faith of the Báb in Káshán. He had attained the presence of the Báb in Mecca and had become an ardent believer. When the Báb was on His way to Tihrán, Hájí Mírzá Jání, after having secured permission from the officials who were conducting the Báb to the Capital, entertained Him in his house for three days. Later he was martyred in Tihrán.†<p>
 	   As a result of association with this brother, Hájí Mírzá Ahmad and his other half-brother, Hájí Muhammad Ismá'íl both became Bábís.<p>
 	   Unlike his two brothers who stayed steadfast in the Cause of God, Hájí Mírzá Ahmad showed unfaithfulness to Bahá'u'lláh and became a follower of Mírzá Yahyá. He first attained the presence of Bahá'u'lláh in Baghdád and later accompanied Him to Constantinople and Adrianople. He was one of those whom Bahá'u'lláh took with Him in order to check his mischief. In one of His Tablets<small><sup>1</sup></small> Bahá'u'lláh refers to Hájí Mírzá Ahmad as one who attained the presence of His Lord and was honoured to associate with Him, yet failed to recognize His station. He heard the voice of God many a time but did not respond. The <i>Lawh-i-Ahmad</i> (Tablet of Ahmad) was revealed by Bahá'u'lláh in Adrianople, in order to guide him to the path of faith and
 	   </td>
@@ -45,7 +45,8 @@
 	   † See <i>The Dawn-Breakers</i>.<p>
 	   <hr>
 	   1. Bahá'u'lláh, quoted by Fádil-i-Mázindarání, <i>Asráru'l-Áthár</i>, vol. V, p. 106.
-
+	   <hr>
+	   [Lawh-i-Ahmad] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
 	   </small></td>
 </tr>
 <tr>
@@ -273,7 +274,7 @@
        <td VALIGN=top><small><center><a name="p150">150</a></center><p>
 	   * The Manifestation of God.<p>
 	   <hr>
-	   15. Shoghi Effendi, <i>God Passes By</i>, pp. 407-8.<p>
+	   15. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p402-412Retro.html#para10">407</a>-8.<p>
 	   16. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#CLII">clii</a>.
 	   </small></td>
 </tr>
