--- a/Baha'i/Others/ROB/V2/p152-170Ch07.html
+++ b/Baha'i/Others/ROB/V2/p152-170Ch07.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p137-151Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p171-193Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -64,7 +64,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p154">154</a></center><p>
 	   <hr>
-	   1. Shoghi Effendi, <i>God Passes By</i>, pp. 165-6.
+	   1. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para159">165</a>-6.
 	   </small></td>
 </tr>
 <tr>
@@ -155,7 +155,7 @@
 	   </blockquote>
 	   In the end Ustád Muhammad-'Alí found himself unable to keep this matter to himself. Soon the news spread and created much fear and anguish in the hearts of the believers in Adrianople.<p>
 	   It was after this event that Bahá'u'lláh decided to announce formally to Mírzá Yahyá, as the nominee of the Báb, His claim to be the Fountain-head of Divine Revelation, 'Him Whom God shall make manifest'. Although Mírzá Yahyá was already informed of the declaration of Bahá'u'lláh and was aware of His claim through His Tablets, nevertheless, this announcement was of great significance, in so far as it left no excuse for Mírzá Yahyá to cloud the issue. Bahá'u'lláh had formally summoned him to pay allegiance to His Cause. Failure to do so would have meant the parting of the ways.<p>
-	   This announcement was made by Bahá'u'lláh through the revelation of a special Tablet known as <i>Súriy-i-Amr</i> (Súrih of
+	   This announcement was made by Bahá'u'lláh through the revelation of a special Tablet known as <i>Súriy-i-Amr</i> (Súrih of 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p161">161</a></center><p>
@@ -164,6 +164,8 @@
 	   ‡ In Persian, to call someone a dog sounds much more insulting than it does in English. (A.T.)<p>
 	   <hr>
 	   5. Quoted by Ishráq Khávarí, <i>Rahíq-i-Makhtúm</i>, vol. II, p. 1201 ff.<br>
+	   <hr>
+	   [Súriy-i-Amr] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
 	   </small></td>
 </tr>
 <tr>
@@ -187,8 +189,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p163">163</a></center><p>
 	   <hr>
-	   6. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 167.<p>
-	   7. <i>ibid</i>.
+	   6. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para163">p. 167</a>.<p>
+	   7. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para163"><i>ibid</i></a>.
 	   </small></td>
 </tr>
 <tr>
@@ -233,7 +235,7 @@
 	   Hájí Mírzá Haydar-'Alí, who arrived in Adrianople a few months after these distasteful events and attained the presence of Bahá'u'lláh many times, has written concerning Mírzá Yahyá's petition to the authorities in these words:<p>
 	   <blockquote>
 	   When Azal arose in hostility with his satanic spirit to oppose and challenge the Blessed Beauty, through calumnies and false accusations, he wrote a letter to the Governor of Adrianople. We* all saw this letter. It opened with these words: 'May my soul and body be a sacrifice for thee.' It went on to say: 'O thou 'Azíz,† we come to you in destitution, grant us some corn.' He continues falsely to accuse the Ancient Beauty of having cut off his livelihood.<p>
-	   The opening sentence of his letter, the statement of his needs, and the complaints all demonstrate that God cannot be confused with man, and that there is no likeness between
+	   The opening sentence of his letter, the statement of his needs, and the complaints all demonstrate that God cannot be confused with man, and that there is no likeness between 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -260,7 +262,7 @@
 	   † See chapter <a href="p283-290Ch13.html">13</a> and also vol. 1, pp. <a href="../V1/p105-152Ch09.html#p109">109</a>-13.<p>
 	   <hr>
 	   8. Hájí Mírzá Haydar-'Alí, <i>Bihjatu's-Sudúr</i>, p. 76.<p>
-	   9. Shoghi Effendi, <i>God Passes By</i>, pp. 167-8.
+	   9. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para164">167</a>-8.
 	   </small></td>
 </tr>
 <tr>
@@ -273,7 +275,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p169">169</a></center><p>
 	   <hr>
-	   10. Shoghi Effendi, <i>God Passes By</i>, p. 137.
+	   10. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para105">p. 137</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -295,7 +297,7 @@
        <td>
 	   	   <FORM ACTION="p137-151Ch06.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -303,12 +305,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p171-193Ch08.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
