--- a/Baha'i/Others/ROB/V2/p171-193Ch08.html
+++ b/Baha'i/Others/ROB/V2/p171-193Ch08.html
@@ -218,6 +218,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p181">181</a></center><p>
 	   * We can appreciate this statement if we reflect on the humiliation to the institution of kingship, if a king had to usher in his visitors in person. Apart from the fact that Bahá'u'lláh was the Supreme Manifestation of God, and His loved ones and disciples were always ready to wait on Him with the utmost devotion, the customs of the time demanded that a man of eminence should have several servants in his household. It was inconceivable that a person of high position would ever take part in the actual running of his house.
+	   <hr>
+	   <hr>
+	   [Lawh-i-Rúh] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
 	   </small></td>
 </tr>
 <tr>
