--- a/Baha'i/Others/ROB/V2/p194-221Ch09.html
+++ b/Baha'i/Others/ROB/V2/p194-221Ch09.html
@@ -302,6 +302,9 @@
        <td VALIGN=top><small><center><a name="p210">210</a></center><p>
 	   * See <i>The Dawn-Breakers</i>.<p>
 	   † The tenth of Muharram, the anniversary of the martyrdom of the Imám Husayn, which fell in that year on 26 November 1849.
+	   <hr>
+	   <hr>
+	   [Lawh-i-Sayyáh] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
 	   </small></td>
 </tr>
 <tr>
@@ -360,7 +363,7 @@
 	   * See vol. 1, pp. <a href="../V1/p153-197Ch10.html#p187">187</a>-9.<p>
 	   † The numerical value of the word Nabíl is equal to that of 'Akká.<p>
 	   <hr>
-	   8. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 184.
+	   8. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para204">p. 184</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -373,7 +376,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p215">215</a></center><p>
 	   <hr>
-	   9. Nabíl-i-A'zam, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 137.
+	   9. Nabíl-i-A'zam, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para106">p. 137</a>.
 	   </small></td>
 </tr>
 <tr>
