--- a/Baha'i/Others/ROB/V2/p222-235Ch10.html
+++ b/Baha'i/Others/ROB/V2/p222-235Ch10.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p194-221Ch09.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p236-269Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -58,11 +58,11 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p223">223</a></center><p>
-	   * Literally 'O Thou my Lord, the Most Glorious', an invocation. (A.T.)<p>
+	   * Literally 'O Thou my Lord, the Most Glorious', an invocation. (A.T.)<p> 
 	   † Not to be mistaken for Áqá Mírzá Ashraf-i-Ábádi'í who was martyred in Isfahán, and concerning whom Bahá'u'lláh writes these words in the <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para120">p. 72</a>: 'Before them one named Kázim...and after them, his honour Ashraf, all <span style="background-color: #ffffCC" TITLE="drank heartily">quaffed</span> the draught of martyrdom...'<p>
 	   <hr>
 	   2. Bahá'u'lláh, <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para121">p. 73</a>.<p>
-	   3. Shoghi Effendi, <i>God Passes By</i>, p. 178.
+	   3. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para190">p. 178</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -236,7 +236,7 @@
        <td>
 	   	   <FORM ACTION="p194-221Ch09.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -244,12 +244,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p236-269Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
