--- a/Baha'i/Others/ROB/V2/p236-269Ch11.html
+++ b/Baha'i/Others/ROB/V2/p236-269Ch11.html
@@ -44,7 +44,11 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   This exhortation to shun those who arise to oppose the Centre of the Cause from within the community is unique in the field of religion. It is aimed at protecting the faithful from the pernicious influence of the egotist, the vainglorious and the insincere who strive to divide the Faith of God and bring schism within its ranks. In past Dispensations no provisions were made to protect the Faith from division. In many cases the followers interpreted the words of their Prophets to suit themselves and consequently many sects appeared within each religion. In this Dispensation Bahá'u'lláh has made strict provision
 	   </td>
        <td></td>
-       <td VALIGN=top><small><center><a name="p236">236</a></center><p></small></td>
+       <td VALIGN=top><small><center><a name="p236">236</a></center><p>
+	   <hr>
+	   <hr>
+	   [Súriy-i-Damm] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
+	   </small></td>
 </tr>
 <tr>
        <td>
@@ -103,7 +107,8 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   <hr>
 	   4. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#XXXIX">xxxix</a>.<p>
 	   <hr>
-	   [pilgrimage] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para32">&para;32</a>
+	   [pilgrimage] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para32">&para;32</a><p>
+	   [Súriy-i-Hajj] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
 	   </small></td>
 </tr>
 </table>
@@ -309,7 +314,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   * See vol. 1, pp. <a href="../V1/p257-282Ch16.html#p277">277</a>-8 and 280.<p>
 	   <hr>
 	   13. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#para51">xiv</a>. <p>
-	   14. The Báb, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 30.
+	   14. The Báb, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para51">p. 30</a>.
 	   <hr>
 	   ["Verily, We have caused..."] <i>The Revelation of Bahá'u'lláh</i>, vol.1 <a href="../V1/p257-282Ch16.html#p277">p. 277</a>
 	   </small></td>
@@ -339,7 +344,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   * For more information concerning the manner of Revelation, the potency of the Word and the vastness of the Holy Writings, refer to vol. 1, <a href="../V1/p018-044Ch03.html">chapter 3</a>.<p>
 	   <hr>
 	   15. Bahá'u'lláh, <i>Gleanings from the Writings of Bahá'u'lláh</i>, section <a href="../../../Baha/GL/p003-346.html#para169">xliii</a>.<p>
-	   16. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 171.
+	   16. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para171">p. 171</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -447,12 +452,12 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
        <td></td>
        <td VALIGN=top><small><center><a name="p261">261</a></center><p>
 	   * Some excerpts from his Tablets are translated and included in <i>Gleanings from the Writings of Bahá'u'lláh</i>, sections <a href="../../../Baha/GL/p003-346.html#XXXIII">XXXIII</a>, <a href="../../../Baha/GL/p003-346.html#XXXVIII">XXXVIII</a>, <a href="../../../Baha/GL/p003-346.html#LXXVII">LXXVII</a>, <a href="../../../Baha/GL/p003-346.html#CXXVII">CXXVII</a>.<p>
-	   † For more details of the life and rebellion of Muhammad-'Alí see <i>God Passes By</i> and <i>The Revelation of Bahá'u'lláh</i>, <a href="../V1/p351-363Index.html#Muhammad-'Alí,Mírzá">vol. 1</a>.<p>
+	   † For more details of the life and rebellion of Muhammad-'Alí see <i><a href="../../../SE/GPB/p235-320ThirdPeriod.html#p244">God Passes By</a></i> and <i>The Revelation of Bahá'u'lláh</i>, <a href="../V1/p351-363Index.html#Muhammad-'Alí,Mírzá">vol. 1</a>.<p>
 	   ‡ From time to time Bahá'u'lláh instructed 'Abdu'l-Bahá to write on certain subjects.<p>
 	   <hr>
-	   24. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 242.<p>
+	   24. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para13">p. 242</a>.<p>
 	   25. Bahá'u'lláh, <i>Má'idiy-i-Ásamání</i>, vol. VIII, p. 40.<p>
-	   26. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 251.
+	   26. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para30">p. 251</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -567,7 +572,7 @@ p261 footnote: should list of tablets revealed for Khalíl also include Gleaning
 	   * See vol. 1, p. <a href="../V1/p053-070Ch05.html#p69">69</a>.<p>
 	   † The Universal House of Justice was first elected by the National Spiritual Assemblies of the world on 21 April 1963, the centenary of the Declaration of Bahá'u'lláh.<p>
 	   <hr>
-	   31. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 171.
+	   31. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para171">p. 171</a>.
 	   <hr>
 	   [Bahá'u'lláh as Joseph]: <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="p171-193Ch08.html#p179">p. 179</a>, vol. 4 <a href="../V4/p073-090Ch05.html#p81">p. 81</a>
 	   </small></td>
