--- a/Baha'i/Others/ROB/V2/p291-300Ch14.html
+++ b/Baha'i/Others/ROB/V2/p291-300Ch14.html
@@ -1,6 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <!-- Covenant Library: \cl\Baha'i\Others\ROB\V2\p291-300Ch14.html -->
 
+<!-- Issues List
+
+P. 293...quote from God Passes By...combined two paragrash so they match the text of God Passes By
+
+-->
+
 <html>
 <head>
 	<title>The Revelation of Bahá'u'lláh, Volume 2, Chapter 14</title>
@@ -13,7 +19,7 @@
        <td>
 	   	   <FORM ACTION="p283-290Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +27,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p301-336Ch15.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -46,7 +52,7 @@
 	   This form of confrontation, known as <i>mubáhilih</i>, had taken place in Islám. For instance, when a deputation of the Christians of Najrán in Medina were talking of offering a challenge to the Prophet Muhammad, it was to be a confrontation in the form of <i>mubáhilih</i>. This is a challenge between truth and falsehood; the two parties come together, each one invoking God to annihilate the other, and calling on His wrath to strike down the faithless. It is expected in these circumstances that the power of Truth will destroy the forces of falsehood.<p>
 	   The person who became instrumental in bringing this matter to its conclusion was Mír Muhammad-i-Mukárí from Shíráz, a caravan-driver who had accompanied the Báb on His pilgrimage to Mecca, and later, Bahá'u'lláh from Baghdád to Constantinople.* Although he was uneducated, Mír Muhammad was a man of great discernment, wisdom and courage. He was a Bábí and, being confused with the differences which had arisen in the Faith, he travelled especially to Adrianople in order to investigate the truth for himself. While in that city, he moved freely among the companions of Bahá'u'lláh and the supporters of Mírzá Yahyá alike.<p>
 	   Soon after his arrival he heard Siyyid Muhammad's propaganda about a confrontation with Bahá'u'lláh. This created great interest in Mír Muhammad who urged Siyyid Muhammad to induce Mírzá Yahyá to meet Bahá'u'lláh in a public place for a <i>mubáhilih</i>. He in turn promised personally to invite Bahá'u'lláh to accept the challenge. This is how Shoghi Effendi describes this important event:<p>
-	   <blockquote>A certain Mír Muhammad, a Bábí of Shíráz, greatly resenting alike the claims and the cowardly seclusion of Mírzá Yahyá, succeeded in forcing Siyyid Muhammad to induce him to meet Bahá'u'lláh face to face, so that a discrimination might be publicly effected between the true and the false. Foolishly assuming that his illustrious Brother would never countenance such a proposition, Mírzá Yahyá appointed the mosque</blockquote>
+	   <blockquote>A certain Mír Muhammad, a Bábí of Shíráz, greatly resenting alike the claims and the cowardly seclusion of Mírzá Yahyá, succeeded in forcing Siyyid Muhammad to induce him to meet Bahá'u'lláh face to face, so that a discrimination might be publicly effected between the true and the false. Foolishly assuming that his illustrious Brother would never countenance such a proposition, Mírzá Yahyá appointed the mosque</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p292">292</a></center><p>
@@ -57,8 +63,7 @@
        <td>
 	   <blockquote>
 	   of Sultán Salím as the place for their encounter. No sooner had Bahá'u'lláh been informed of this arrangement than He set forth, on foot, in the heat of midday, and accompanied by this same Mír Muhammad, for the afore-mentioned mosque, which was situated in a distant part of the city, reciting, as He walked, through the streets and markets, verses, in a voice and in a manner that greatly astonished those who saw and heard Him.<p>
-	   'O Muhammad!', are some of the words He uttered on that memorable occasion, as testified by Himself in a Tablet, 'He Who is the Spirit hath, verily, issued from His habitation, and with Him have come forth the souls of God's chosen ones and the realities of His Messengers. Behold, then, the dwellers of the realms on high above Mine head, and all the testimonies of the Prophets in My grasp. Say: Were all the divines, all the wise men, all the kings and rulers on earth to gather together, I, in very truth, would confront them, and would proclaim the verses of God, the Sovereign, the Almighty, the All-Wise. I am He Who feareth no one, though all who are in heaven and all who are on earth rise up against me...This is Mine hand which God hath turned white for all the worlds to behold. This is My staff; were We to cast it down, it would, of a truth, swallow up all created things.'<p>
-	   Mír Muhammad, who had been sent ahead to announce Bahá'u'lláh's arrival, soon returned, and informed Him that he who had challenged His authority wished, owing to unforeseen circumstances, to postpone for a day or two the interview. Upon His return to His house Bahá'u'lláh revealed a Tablet, wherein He recounted what had happened, fixed the time for the postponed interview, sealed the Tablet with His seal, entrusted it to Nabíl, and instructed him to deliver it to one of the new believers, Mullá Muhammad-i-Tabrízí, for the information of Siyyid Muhammad, who was in the habit of frequenting that believer's shop. It was arranged to demand from Siyyid Muhammad, ere the delivery of that Tablet, a sealed note pledging Mírzá Yahyá, in the event of failing to appear at the trysting-place, to affirm in writing that
+	   'O Muhammad!', are some of the words He uttered on that memorable occasion, as testified by Himself in a Tablet, 'He Who is the Spirit hath, verily, issued from His habitation, and with Him have come forth the souls of God's chosen ones and the realities of His Messengers. Behold, then, the dwellers of the realms on high above Mine head, and all the testimonies of the Prophets in My grasp. Say: Were all the divines, all the wise men, all the kings and rulers on earth to gather together, I, in very truth, would confront them, and would proclaim the verses of God, the Sovereign, the Almighty, the All-Wise. I am He Who feareth no one, though all who are in heaven and all who are on earth rise up against me...This is Mine hand which God hath turned white for all the worlds to behold. This is My staff; were We to cast it down, it would, of a truth, swallow up all created things.'  Mír Muhammad, who had been sent ahead to announce Bahá'u'lláh's arrival, soon returned, and informed Him that he who had challenged His authority wished, owing to unforeseen circumstances, to postpone for a day or two the interview. Upon His return to His house Bahá'u'lláh revealed a Tablet, wherein He recounted what had happened, fixed the time for the postponed interview, sealed the Tablet with His seal, entrusted it to Nabíl, and instructed him to deliver it to one of the new believers, Mullá Muhammad-i-Tabrízí, for the information of Siyyid Muhammad, who was in the habit of frequenting that believer's shop. It was arranged to demand from Siyyid Muhammad, ere the delivery of that Tablet, a sealed note pledging Mírzá Yahyá, in the event of failing to appear at the trysting-place, to affirm in writing that
 	   </blockquote>
 	   </td>
        <td></td>
@@ -76,7 +81,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p294">294</a></center><p>
 	   <hr>
-	   1. Shoghi Effendi, <i>God Passes By</i>, pp. 168-9.<p>
+	   1. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para165">168</a>-9.<p>
 	   2. <i>Má'idiy-i-Ásamání</i>, vol. VII, p. 240. <p>
 	   3. <i>ibid</i>., p. 241.
 	   </small></td>
@@ -98,12 +103,12 @@
 	   <blockquote>
 	   prostrated themselves at His feet and kissed them. Bahá'u'lláh, the Countenance of majesty and omnipotence, in acknowledgement greeted the crowd by raising His hands (as was customary among the Ottomans), and expressed His good wishes. This continued all the way to the mosque. As soon as He entered the mosque, the preacher, who was delivering his discourse, became speechless or perhaps he forgot his words. Bahá'u'lláh went forward, seated Himself and then gave permission to the preacher to continue. Eventually the preaching and prayers came to an end. But Azal did not turn up. We heard that he had feigned illness and asked to be excused.<p>
 	   In every city in the Ottoman Empire, there are Mawlavís, who are dervishes and followers of Mawlaví,* the author of <i>Mathnaví</i>. Every Friday they hold their services in their <i>takyihs</i> (centres of congregation) when they whirl around their master and chant certain words in unison. Inside its chambers some play music and sing delightful melodies. When Bahá'u'lláh was about to leave the mosque He said: 'We owe a visit to the Mawlavís. We had better go to their takyih.' As He rose to go, the Governor of Adrianople and other dignitaries, together with the divines, availed themselves of the opportunity to be in His presence and so they accompanied Him. As a token of their humility and courtesy, the Governor, the Shaykhu'l-Islám,† the 'ulamá‡ and other dignitaries walked four or five steps behind Bahá'u'lláh while the stream of His utterance was flowing.§ Sometimes, through His grace and loving-kindness, Bahá'u'lláh would stop and beckon the Governor and the others to walk in front. But they would refuse to do so. In this way, with
-	   </blockquote>
+	   </blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p296">296</a></center><p>
 	   * Jaláli'd-Dín-i-Rúmí.<p>
-	   † The head of the Muslim ecclesiastical institution in the city.<p>
+	   † The head of the Muslim ecclesiastical institution in the city.<p> 
 	   ‡ Divines and men of learning.<p>
 	   § When an important person walked it was considered discourteous if his subordinates walked in front of, or abreast of him except at night when someone carried a lantern before him. In order to show their humility they always walked a few steps behind. This is how, for example, the oriental believers conducted themselves when they were walking with Bahá'u'lláh, 'Abdu'l-Bahá or Shoghi Effendi.
 	   </small></td>
@@ -163,7 +168,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p300">300</a></center><p>
 	   <hr>
-	   6. Shoghi Effendi, <i>God Passes By</i>, pp. 170-1.
+	   6. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para168">170</a>-1.
 	   </small></td>
 </tr>
 </table>
@@ -173,7 +178,7 @@
        <td>
 	   	   <FORM ACTION="p283-290Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -181,12 +186,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p301-336Ch15.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
