--- a/Baha'i/Others/ROB/V2/p301-336Ch15.html
+++ b/Baha'i/Others/ROB/V2/p301-336Ch15.html
@@ -54,6 +54,8 @@ p 324 incorrect quote (did not correct it)
 	   * Shoghi Effendi, the Guardian of the Faith, has translated parts of this Tablet into English. They are found mainly in <i>Gleanings from the Writings of Bahá'u'lláh</i>, sections <a href="../../../Baha/GL/p003-346.html#LXV">LXV</a>, <a href="../../../Baha/GL/p003-346.html#LXVI">LXVI</a>, <a href="../../../Baha/GL/p003-346.html#CXIII">CXIII</a>, <a href="../../../Baha/GL/p003-346.html#CXIV">CXIV</a>, <a href="../../../Baha/GL/p003-346.html#CXVI">CXVI</a>, <a href="../../../Baha/GL/p003-346.html#CXVIII">CXVIII</a> and <i>The Promised Day is Come</i>, pp. 20-21.<p>
 	   <hr>
 	   1. Bahá'u'lláh, quoted by Shoghi Effendi, <i>The Promised Day Is Come</i>, p. 20.
+	   <hr>
+	   [Súriy-i-Mulúk] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para151">p. 161</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para173">p. 172</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para180">p. 174</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para183">p. 175</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para219">p. 190</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para255">p. 206</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para313">p. 227</a>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para165">p. 316</a>
 	   </small></td>
 </tr>
 <tr>
