--- a/Baha'i/Others/ROB/V2/p337-369Ch16.html
+++ b/Baha'i/Others/ROB/V2/p337-369Ch16.html
@@ -40,7 +40,7 @@
 <tr>
        <td width="80%"><center><img src="../Media/16.jpg" border="0" alt="16" align="middle"></center><p>
 	   <center><h2>Two Kings are Summoned</h2></center><p>
-	   The <i>Súriy-i-Mulúk</i> was not the only Tablet addressed to the kings. Bahá'u'lláh also revealed a number of Tablets to certain kings, rulers and religious leaders individually. Two of them were revealed in Adrianople: the <i>Lawh-i-Sultán</i> (Tablet to Násiri'd-Dín Sháh) and the first tablet to Napoleon III.<p>
+	   The <a href="p301-336Ch15.html"><i>Súriy-i-Mulúk</i></a> was not the only Tablet addressed to the kings. Bahá'u'lláh also revealed a number of Tablets to certain kings, rulers and religious leaders individually. Two of them were revealed in Adrianople: the <i>Lawh-i-Sultán</i> (Tablet to Násiri'd-Dín Sháh) and the first tablet to Napoleon III.<p>
 	   <b>Themes of the Lawh-i-Sultán</b><p>
 	   Násiri'd-Dín Sháh was the only monarch to have been closely involved with the Faith of the Báb from the first. He had been informed of its birth soon after the disciples of the Báb began to spread His Faith and he had witnessed its meteoric rise. His was the privilege as Crown Prince of meeting its Author face to face and hearing Him declare in ringing tones to an assembled gathering of the divines and dignitaries of Ádhirbáyján, these majestic words: 'I am, I am, I am the Promised One! I am the One Whose name you have for a thousand years invoked, at Whose mention you have risen, Whose advent you have longed to witness, and the hour of Whose Revelation you have prayed God to hasten. Verily, I say, it is incumbent upon the peoples of both the East and the West to obey My word, and to pledge allegiance to My person.' <small><sup>1</sup></small><p>
 	   Having observed the overpowering zeal and enthusiasm of the Bábís, and having watched with fear and dismay the humiliating defeats they had inflicted on his army,* he arose
@@ -49,7 +49,9 @@
        <td VALIGN=top><small><center><a name="p337">337</a></center><p>
 	   * In the days of the Báb, the believers defended themselves against their enemies. This resulted in many bloody struggles in which the Bábís triumphed over their adversaries. Bahá'u'lláh has enjoined on His followers not to resort to force when attacked in the path of God. For a more detailed discussion of this subject, see vol. 1, pp. <a href="../V1/p257-282Ch16.html#p278">278</a>-9, and above, p. <a href="p236-269Ch11.html#p258">258</a>.<p>
 	   <hr>
-	   1. The Báb, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 21.
+	   1. The Báb, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para34">p. 21</a>.
+	   <hr>
+	   [Lawh-i-Sultán] <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para43">p. 26</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para115">p. 143</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para116">p. 144</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 172</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para208">p. 185</a>
 	   </small></td>
 </tr>
 <tr>
@@ -118,7 +120,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p342">342</a></center><p>
 	   * Nabíl-i-Akbar, in his earlier days, had mastered the subjects of divine philosophy and metaphysics. It was later in his life that he went to 'Iráq, became a renowned <i>mujtahid</i> and acquired great fame.<p>
-	   † See <i>God Passes By</i>.
+	   † See <a href="../../../SE/GPB/p001-086FirstPeriod.html#p61"><i>God Passes By</i></a>.
 	   </small></td>
 </tr>
 <tr>
@@ -331,7 +333,7 @@
        <td VALIGN=top><small><center><a name="p356">356</a></center><p>
 	   * This is a reference to those companions whom Bahá'u'lláh advised to enrol themselves as subjects of the Ottoman Government.<p>
 	   <hr>
-	   14. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 186.
+	   14. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para208">p. 186</a>.
 	   </small></td>
 </tr>
 <tr>
