--- a/Baha'i/Others/ROB/V2/p370-387Ch17.html
+++ b/Baha'i/Others/ROB/V2/p370-387Ch17.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p337-369Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p388-396Ch18.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -41,6 +41,9 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p370">370</a></center><p>
 	   * See vol. 1, chapter <a href="../V1/p153-197Ch10.html">10</a>.
+	   <hr>
+	   <hr>
+	   [The Kitáb-i-Badí'] <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para46">p. 27</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 172</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para188">p. 176</a>
 	   </small></td>
 </tr>
 <tr>
@@ -111,7 +114,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p376">376</a></center><p>
-	   * The Báb had bestowed the title 'Mirror' upon several of His followers.<p>
+	   * The Báb had bestowed the title 'Mirror' upon several of His followers.<p> 
 	   † He Whom God shall make manifest. (A.T.)<p>
 	   <hr>
 	   2. The Báb, quoted by Bahá'u'lláh, in the <i>Kitáb-i-Badí'</i>, and also in English in <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para229">p. 156</a>.
@@ -166,10 +169,10 @@
        <td VALIGN=top><small><center><a name="p379">379</a></center><p>
 	   * Bahá'u'lláh. (A.T.)<p>
 	   <hr>
-	   7. The Báb, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 30.<p>
-	   8. <i>ibid</i>., p. 29.<p>
+	   7. The Báb, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p001-086FirstPeriod.html#para51">p. 30</a>.<p>
+	   8. <i>ibid</i>., <a href="../../../SE/GPB/p001-086FirstPeriod.html#para49">p. 29</a>.<p>
 	   9. The Báb, quoted by Bahá'u'lláh, in the <i>Kitáb-i-Badí'</i>, and also in English in <i>Epistle to the Son of the Wolf</i>, <a href="../../../Baha/EW/p001-182.html#para247">p. 171</a>.<p>
-	   10. <i>ibid</i>., pp. <a href="../../../Baha/EW/p001-182.html#para227">154</a>-5.
+	   10. <i>ibid</i>., pp. <a href="../../../Baha/EW/p001-182.html#para227">154</a>-5. 
 	   </small></td>
 </tr>
 <tr>
@@ -210,7 +213,7 @@
 	   <b>Khadíjih-Bagum</b><p>
 	   In the <i>Kitáb-i-Badí</i> Bahá'u'lláh extols the virtues and exalted station of Fátimih-Bagum, the mother of the Báb,* and His wife Khadíjih-Bagum, designates them both as the Khayru'n Nisá' (The Most Virtuous among Women) and enjoins on His loved ones to venerate and honour them.<p>
 	   Khadíjih-Bagum was of noble lineage. She was a paternal cousin of the mother of the Báb. Her marriage with the Báb took place almost two years before His declaration. Through the purity of her heart, Khadíjih-Bagum recognized the station of her beloved Husband and acknowledged the truth of His Cause in the early days of His ministry. She was an eye-witness to that transforming power which emanated from the person of the Báb, a power which revolutionized the lives and conduct of His early disciples and the heroes of the Bábí Faith. Concerning Khadíjih-Bagum, Nabíl-i-A'zam writes in his narrative:<p>
-	   <blockquote>The wife of the Báb, unlike His mother, perceived at the earliest dawn of His Revelation the glory and uniqueness of His Mission, and felt from the very beginning the intensity of its force. No one except Táhirih, among the women of her generation, surpassed her in the spontaneous character of her devotion nor excelled the fervour of her faith. To her the Báb confided the secret of His future sufferings, and unfolded to her eyes the significance of the events that were to transpire in His Day. He bade her not to divulge this secret to His mother and counselled her to be patient and resigned to the will of God. He entrusted her with a special prayer, revealed and written by Himself, the reading of which, He assured her, would remove her difficulties and lighten the burden of her woes. 'In the hour of your perplexity,' He directed her, 'recite this prayer ere you go to sleep. I Myself will appear to you and will banish your anxiety.' Faithful to His advice, every time she turned to Him in prayer, the</blockquote>
+	   <blockquote>The wife of the Báb, unlike His mother, perceived at the earliest dawn of His Revelation the glory and uniqueness of His Mission, and felt from the very beginning the intensity of its force. No one except Táhirih, among the women of her generation, surpassed her in the spontaneous character of her devotion nor excelled the fervour of her faith. To her the Báb confided the secret of His future sufferings, and unfolded to her eyes the significance of the events that were to transpire in His Day. He bade her not to divulge this secret to His mother and counselled her to be patient and resigned to the will of God. He entrusted her with a special prayer, revealed and written by Himself, the reading of which, He assured her, would remove her difficulties and lighten the burden of her woes. 'In the hour of your perplexity,' He directed her, 'recite this prayer ere you go to sleep. I Myself will appear to you and will banish your anxiety.' Faithful to His advice, every time she turned to Him in prayer, the</blockquote> 
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p382">382</a></center><p>
@@ -224,7 +227,7 @@
 	   In his narratives, the late Hájí Mírzá Habíbu'lláh-i-Afnán* writes the following account concerning the wife of the Báb.<p>
 	   <blockquote>
 	   ...The Blessed Beauty after His arrival in Baghdád sent many Tablets, with His own signature, 152,† (which signifies Bahá) to various parts of Persia. These were taken to their intended destinations by some trustworthy individuals. Among these was a Tablet revealed in honour of the Exalted Leaf,‡ the wife of the Báb. At that time no one among the family of the Afnán§ had embraced the Faith, and therefore the wife of the Báb had no close friend in whom she could confide. For this reason, she entered into conversation about the Faith with the father of the writer, Jináb-i-Afnán, Áqá Mírzá Áqá, &para; who was her nephew (her sister's son), and was then thirteen years of age.<p>
-	   ...Because of the purity of her heart, Áqá Mírzá Áqá was deeply attracted to the Cause of God, recognized its truth
+	   ...Because of the purity of her heart, Áqá Mírzá Áqá was deeply attracted to the Cause of God, recognized its truth 
 	   </blockquote>
 	   </td>
        <td></td>
@@ -275,7 +278,7 @@
 	   <blockquote>
 	   the Book of the accounts of all the peoples of the world.' Should any visitor suddenly arrive, He would spread a handkerchief over the papers. All close relatives such as His uncles and aunts were fully conscious of His exalted personality. They revered Him and showed the utmost respect towards Him, until the fateful night of the 5th of Jamádíyu'l-Avval 1260 A.H. (22 May 1844) arrived. It was the night that Jináb-i-Bábu'l-Báb, Mullá Husayn-i-Bushrú'í* attained the presence of the Báb and acknowledged the truth of His Cause. That was indeed a memorable evening. The Báb intimated that we were having a guest who was dear to Him. He was as if on fire and in the utmost excitement. I was very eager to hear His blessed words, but He bade me go to bed. Although I was lying awake the whole night, I remained in bed as I did not wish to disobey Him. I could hear His voice until morning as He conversed with Jináb-i-Bábu'l-Báb. He was reading the verses of God and adducing proofs. Later I observed that every day a strange guest would arrive and the Báb would engage in similar talks.<p>
 	   'If I attempt to describe the sufferings and persecutions of those days, I will not be able to endure talking about them, neither will you have the fortitude to listen to them...<p>
-	   'One night, I woke up about midnight to find that the...Chief Constable 'Abdu'l-Hamíd had entered the house from the roof with his men and, without giving any reasons, took the Báb with him.† I never attained His presence again...' <small><sup>17</sup></small>
+	   'One night, I woke up about midnight to find that the...Chief Constable 'Abdu'l-Hamíd had entered the house from the roof with his men and, without giving any reasons, took the Báb with him.† I never attained His presence again...' <small><sup>17</sup></small> 
 	   </blockquote>
 	   Munírih Khánum describes in her memoirs how eager the wife of the Báb was for her to prolong the visit, but Shaykh Salmán had instructions from Bahá'u'lláh to proceed to 'Akká in company with the caravan which was taking the Muslim pilgrims to Mecca and time was running out.<p>
 	   <blockquote>After we bade farewell to her, the wife of the Báb said, 'Please supplicate the Blessed Perfection to grant two wishes of mine. One, that one of the exalted Leaves of the blessed</blockquote>
@@ -311,7 +314,7 @@
        <td>
 	   	   <FORM ACTION="p337-369Ch16.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -319,12 +322,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p388-396Ch18.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
