--- a/Baha'i/Others/ROB/V2/p388-396Ch18.html
+++ b/Baha'i/Others/ROB/V2/p388-396Ch18.html
@@ -43,6 +43,9 @@
        <td VALIGN=top><small><center><a name="p388">388</a></center><p>
 	   * The first of the Báb's disciples.<p>
 	   † See <i>The Dawn-Breakers</i>.
+	   <hr>
+	   <hr>
+	   [Súriy-i-Ghusn] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para188">p. 176</a>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para13">p. 242</a>
 	   </small></td>
 </tr>
 <tr>
@@ -86,7 +89,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p391">391</a></center><p>
 	   <hr>
-	   3. Shoghi Effendi, <i>God Passes By</i>, p. 241.
+	   3. Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para11">p. 241</a>.
 	   </small></td>
 </tr>
 <tr>
