--- a/Baha'i/Others/ROB/V2/p397-421Ch19.html
+++ b/Baha'i/Others/ROB/V2/p397-421Ch19.html
@@ -45,6 +45,8 @@
 	   <hr>
 	   [Fast] <a href="../../../Baha/KA/p258-296Index.html#Fasting"><i>The Kitáb-i-Aqdas</i></a>; <i>The Kitáb-i-Íqán</i>, <a href="../../../Baha/KI/p001-094.html#para39">p. 39</a>-40; <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para313">p. 109</a>; <a href="../../../Baha/PM/Index.html#Fast"><i>Prayers and Meditations</i></a>; <a href="../../../Baha/GL/Index.html#Fast"><i>Gleanings From The Writings Of Bahá'u'lláh</i></a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../V3/p467-483Index.html#Fasting">vol. 3</a>, vol. 4 <a href="../V4/p001-010Ch01.html#p9">p. 9</a><p>
 	   [Ridván] <a href="../../../Baha/KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <a href="../../../Baha/KI/p271-274Index.html#Ridván"><i>The Kitáb-i-Íqán</i></a>; <i>Prayers and Meditations</i>, <a href="../../../Baha/PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../../../Baha/GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="p351-363Index.html#Ridván">1</a>, <a href="../V2/p469-476Index.html#Ridván">2</a>, <a href="../V3/p467-483Index.html#Ridván">3</a>, <a href="../V4/p463-485Index.html#Ridván,Gardenof">4</a>
+	   <hr>
+	   [Munájátháy-i-Síyám] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 171</a>
 	   </small></td>
 </tr>
 <tr>
@@ -70,7 +72,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p399">399</a></center><p>
 	   <hr>
-	   1. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 186.
+	   1. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para209">p. 186</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -159,11 +161,11 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p403">403</a></center><p>
-	   * Shoghi Effendi has written a brief account of it in <i>God Passes By</i>, pp. 273-6.<p>
+	   * Shoghi Effendi has written a brief account of it in <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p235-320ThirdPeriod.html#p273">273</a>-6.<p>
 	   † It appears that not until the exiles arrived at Gallipoli were they informed of their ultimate destination as set out in the Royal edict.<p>
 	   ‡ See vol. 1, pp. <a href="../V1/p283-293Ch17.html">288</a>-9, and <i>Memorials of the Faithful</i>.<p>
 	   <hr>
-	   9. Quoted by Shoghi Effendi, <i>God Passes By</i>, p. 180.
+	   9. Quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para193">p. 180</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -279,7 +281,9 @@
 	   † See vol. 1, pp. <a href="../V1/p283-293Ch17.html#p287">287</a>-8. (A.T.)<p>
 	   ‡ Not to be confused with <i>Lawh-i-Ra'ís</i> in Persian, revealed in 'Akká and also addressed to 'Álí Páshá.<p>
 	   <hr>
-	   11. Shoghi Effendi, <i>God Passes By</i>, pp. 180-82.
+	   11. Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para195">180</a>-82.
+	   <hr>
+	   [Súriy-i-Ra'ís] <i>God Passes By</i>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para172">p. 172</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para176">p. 173</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para179">p. 174</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para193">p. 179</a>, <a href="../../../SE/GPB/p087-234SecondPeriod.html#para194">p. 180</a>
 	   </small></td>
 </tr>
 <tr>
@@ -340,8 +344,8 @@
        <td VALIGN=top><small><center><a name="p415">415</a></center><p>
 	   * See vol. 1, pp. <a href="../V1/p096-104Ch08.html#p101">101</a>-3.<p>
 	   <hr>
-	   15. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, pp. 179-80. <p>
-	   16. <i>ibid</i>., p. 180.
+	   15. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, pp. <a href="../../../SE/GPB/p087-234SecondPeriod.html#para193">179</a>-80. <p>
+	   16. <i>ibid</i>., <a href="../../../SE/GPB/p087-234SecondPeriod.html#para194">p. 180</a>.
 	   </small></td>
 </tr>
 <tr>
