--- a/Baha'i/Others/ROB/V2/p451-454Biblio.html
+++ b/Baha'i/Others/ROB/V2/p451-454Biblio.html
@@ -87,7 +87,7 @@
 	   NABÍL-I-A'ZAM. (Muhammad-i-Zarandí). <i>The Dawn-Breakers</i>. Nabíl's Narrative of the Early Days of the Bahá'í Revelation. Wilmette, Illinois: Bahá'í Publishing Trust, 1932. London: Bahá'í Publishing Trust, 1953.<p>
 	   SAMANDAR, SHAYKH KÁZIM. <i>Táríkh-i-Samandar</i>. (The History of Samandar). Tihrán: Bahá'í Publishing Trust, 131 B.E. (A.D. 1974).<p>
 	   SHOGHI EFFENDI. <i>The Advent of Divine Justice</i>. First published 1939. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1963.<p>
-	   <blockquote><i>God Passes By</i>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p></blockquote>
+	   <blockquote><i><a href="../../../SE/GPB/Cover.html">God Passes By</a></i>. Wilmette, Illinois: Bahá'í Publishing Trust, 1944.<p></blockquote>
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p453">453</a></center><p></small></td>
