--- a/Baha'i/Others/ROB/V2/p270-282Ch12.html
+++ b/Baha'i/Others/ROB/V2/p270-282Ch12.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p236-269Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p283-290Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -270,6 +270,8 @@
 	   <hr>
 	   12. Bahá'u'lláh, <i>The Hidden Words</i>, nos. <a href="../../../Baha/HiddenWords.html#persian80">80</a> and <a href="../../../Baha/HiddenWords.html#persian82">82</a>, Persian.<p>
 	   13. Bahá'u'lláh, 'Words of Wisdom', <i>The Bahá'í Revelation</i>, p. 138.
+	   <hr>
+	   ["The source of all good..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para437">p. 155</a>
 	   </small></td>
 </tr>
 </table>
@@ -279,7 +281,7 @@
        <td>
 	   	   <FORM ACTION="p236-269Ch11.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -287,12 +289,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p283-290Ch13.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
