--- a/Baha'i/Others/ROB/V2/p283-290Ch13.html
+++ b/Baha'i/Others/ROB/V2/p283-290Ch13.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="p270-282Ch12.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -21,12 +21,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p291-300Ch14.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -129,7 +129,7 @@
        <td VALIGN=top><small><center><a name="p290">290</a></center><p>
 	   * For a further discussion of this subject, see vol. 1, pp. <a href="../V1/p105-152Ch09.html#129">129</a>-37, and pp. <a href="../V1/p228-245Ch14.html#p240">240</a>-42.<p>
 	   <hr>
-	   4. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, p. 245.
+	   4. Bahá'u'lláh, quoted by Shoghi Effendi, <i>God Passes By</i>, <a href="../../../SE/GPB/p235-320ThirdPeriod.html#para21">p. 245</a>.
 	   </small></td>
 </tr>
 </table>
@@ -139,7 +139,7 @@
        <td>
 	   	   <FORM ACTION="p270-282Ch12.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -147,12 +147,12 @@
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="p291-300Ch14.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
